fixed image transparency in Work section, adjusting alignment of sections, changed font family of section h3s

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --drkpurple: #654062;
+    --drkpurple: #382336;
     --wrmyellow: #FFD66B;
     --coralorng: #FF9D72;
     --kindagrey: #F4F4F4;
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    border: 1px dashed red;
+    /* border: 1px dashed red; */
 }
 body {
     background-color: var(--kindagrey);
@@ -75,7 +75,7 @@ section {
     padding: 5%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: space-evenly;
     align-items: flex-start;
     background-color: var(--wrmyellow);
     width: 90%;
@@ -86,12 +86,11 @@ section > h3 {
     border-bottom: 2px solid var(--drkpurple);
     padding-bottom: 2px;
     flex: initial;
+    font-family: cursive;
+    font-size: 1.2rem;
 }
 section img {
-    background-color: var(--kindagrey);
-    padding: 5px;
     width: 600px;
-    line-height: 1.5;
     margin-bottom: 5px;
 }
 
